[package]
name = "trace-examples"
version = "0.1.0"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2018"

[package.metadata.rtic-scope]
pac = "stm32f4"
pac_features = ["stm32f401"]
interrupt_path = "stm32f4::stm32f401::Interrupt"

# Used as fallback if the above package-level metadata block is not declared
[workspace.metadata.rtic-scope]
pac = "stm32f4"
pac_features = ["stm32f401"]
interrupt_path = "stm32f4::stm32f401::Interrupt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-halt = "0.2"
cortex-m-rtic = "0.6.0-alpha"
cortex-m-rtic-trace = { git = "https://github.com/rtic-scope/cortex-m-rtic-trace" }

[dependencies.stm32f4]
version = "0.13"
features = ["stm32f401", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.9"
features = ["rt", "stm32f401"]

[patch.crates-io]
cortex-m = { git = "https://github.com/rtic-scope/cortex-m", branch = "feat/tracing" }
